putting a browser into the clone selection instead of tree

--- a/source/java/admin-webapp/src/scripts/volumes/volumes.html
+++ b/source/java/admin-webapp/src/scripts/volumes/volumes.html
@@ -56,8 +56,9 @@
                                 </em>
                             </td>
                             <td class="button-group">
-                                <div class="inline">
-                                    <span class="fui-windows" ng-click="takeSnapshot( $event, volume )" title="Take snapshot"></span>
+                                <div class="inline" style="position: relative;">
+                                    <span class="icon-cake" ng-click="takeSnapshot( $event, volume )" title="Take a snapshot">
+                                    </span>
                                     <span class="icon-pencil" ng-click="edit( $event, volume )" title="Edit settings"></span>
                                     <!--<span class="fui-cross" ng-click="delete( volume )" title="Delete volume"></span>-->
                                 </div>
