--- a/source/java/admin-webapp/src/scripts/main/main.html
+++ b/source/java/admin-webapp/src/scripts/main/main.html
@@ -1,5 +1,12 @@
 <div ng-controller="mainController" class="main">
 
+    <div style="position: absolute;top: 0px;left: 0px;bottom: 0px;right: 0px;z-index: 100;background-color: rgba(0,0,0,0.5);" ng-show="false">
+        <div style="width: 200px;background-color: white;color: black;border: 1px solid gray;text-align: center;margin-right: auto;margin-left: auto;margin-top: 150px;">
+            I'm a dialog
+        </div>
+    </div>
+    
+    
     <div class="login" ng-show="!validAuth">
 
         <div class="login-container">
