error handling improvements with global modal

--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -80,6 +80,7 @@
 
     <script type="text/javascript" src="scripts/directives/widgets/priorityslider/priorityslider.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/variableslider/variableslider.js"></script>
+    <script type="text/javascript" src="scripts/directives/widgets/fds-modal/fds-modal.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/navitem/navitem.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/slidewindowstack/slidewindowstack.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/tristatecheck/tristatecheck.js"></script>
