--- a/source/java/admin-webapp/src/scripts/volumes/create/clone.html
+++ b/source/java/admin-webapp/src/scripts/volumes/create/clone.html
@@ -6,7 +6,7 @@
     
     <div class="to-clone-or-not">
         <fds-radio ng-model="volumeVars.toClone" value="new" name="clone" label="{{ 'volumes.l_create_blank_volume' | translate }}"></fds-radio>
-        <fds-radio ng-model="volumeVars.toClone" value="clone" name="clone" label="{{ 'volumes.l_clone_existing' | translate }}"></fds-radio>
+        <fds-radio ng-model="volumeVars.toClone" value="clone" name="clone" label="{{ 'volumes.l_clone_existing' | translate }}" ng-show="cloneOptions.length > 0"></fds-radio>
 <!--
         <input type="radio" name="clone" value="new" ng-model="volumeVars.toClone"><span>Create new volume</span>
         <input type="radio" name="clone" value="clone" ng-model="volumeVars.toClone"><span>Create from clone</span>
