--- a/source/java/admin-webapp/src/scripts/volumes/volumes.html
+++ b/source/java/admin-webapp/src/scripts/volumes/volumes.html
@@ -14,7 +14,7 @@
             <div class="table-container">
                 <table class="default volumes clickable" style="margin-bottom: 48px;">
                     <thead>
-                        <th translate>volumes.th_performance</th>
+<!--                        <th translate>volumes.th_performance</th>-->
                         <th translate>common.th_name</th>
                         <th translate>common.th_data_type</th>
                         <th>
@@ -28,9 +28,11 @@
                     <tbody>
                         <!-- row per volume -->
                         <tr class="volume-row" ng-repeat="volume in volumes" ng-click="clicked( volume )">
+<!--
                             <td class="volume_time">
                                 <div></div>
                             </td>
+-->
 
                             <td class="name primary-color">
                                 {{volume.name}}
