--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -36,6 +36,7 @@
     <script type="text/javascript" src="scripts/module-manifest.js"></script>
 
     <script type="text/javascript" src="scripts/services/utils/http_helper.js"></script>
+    <script type="text/javascript" src="scripts/services/utils/byte_converter.js"></script>
     <script type="text/javascript" src="scripts/services/admin/authorization.js"></script>
     <script type="text/javascript" src="scripts/services/admin/authentication.js"></script>
     <script type="text/javascript" src="scripts/services/items/volume_api.js"></script>
