--- a/source/java/admin-webapp/src/scripts/status/status.html
+++ b/source/java/admin-webapp/src/scripts/status/status.html
@@ -18,7 +18,7 @@
 <!--                <div class="capacity-tile tile"></div>-->
                 <status-tile tile-title="{{ 'status.l_capacity' | translate }}" bold-number="62"
                     description="what what what what">
-                    <line-chart data="capacityStats" colors="fakeCapColors" opacities="fakeOpacities" suffix="Tb" axis-color="#A0A0A0" line-stipples="capacityLineStipples" line-colors="capacityLineColors" tooltip="setCapacityTooltipText"></line-chart>
+                    <line-chart data="capacityStats" colors="fakeCapColors" opacities="fakeOpacities" y-axis-label-function="capacityLabelFx" axis-color="#A0A0A0" line-stipples="capacityLineStipples" line-colors="capacityLineColors" tooltip="setCapacityTooltipText"></line-chart>
                 </status-tile>
             </div>
         </div>
