adding the ability to have a confirm dialog before a snapshot is created

--- a/source/java/admin-webapp/src/scripts/main/main.html
+++ b/source/java/admin-webapp/src/scripts/main/main.html
@@ -7,7 +7,7 @@
         </div>
     </div>
 -->
-    <fds-modal show-event="fds::alert"></fds-modal>
+    <fds-modal show-event="fds::alert" confirm-event="fds::confirm"></fds-modal>
     
     <div class="login" ng-show="!validAuth">
 
