skinning the create volume page and adding snapshot scheduling

--- a/source/java/admin-webapp/src/scripts/directives/widgets/fds-radio/fds-radio.html
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/fds-radio/fds-radio.html
@@ -4,5 +4,6 @@
         <div class="outer-ring"></div>
         <div class="inner-ring" ng-show="selectedValue === value"></div>
     </div>
+    <span class="{{ iconClass }} radio-icon"></span>
     <label for="{{value}}">{{label}}</label>
 </div>
