--- a/source/java/admin-webapp/src/scripts/directives/angular-fui/fui-dropdown/fui-dropdown.html
+++ b/source/java/admin-webapp/src/scripts/directives/angular-fui/fui-dropdown/fui-dropdown.html
@@ -1,11 +1,12 @@
 <div>
-    <div class="dropdown" ng-class="{open: open === true, 'dropdown-no-background' : background === 'none'}" ng-click="openList( $event )">
-        <button class="btn btn-primary dropdown-toggle" ng-class="{'dropdown-no-background' : background === 'none', skinny: skinny, 'dropdown-gray-border': border === 'gray' }" ng-style="{'background-color': backgroundColor, color: color }">
-            <span ng-class="{'pull-left': type === 'select'}">{{currentLabel}}</span>
+    <div class="dropdown" ng-class="{open: open === true, 'dropdown-no-background' : background === 'none'}" ng-click="openList( $event )" ng-style="{ opacity: (enabled === true ) ? 1.0 : 0.5 }">
+        <button class="btn btn-primary dropdown-toggle" ng-class="{'dropdown-no-background' : background === 'none', skinny: skinny, 'dropdown-gray-border': border === 'gray' }" ng-style="{'background-color': backgroundColor, color: color, width: width }">
+            <span ng-class="{'pull-left': type === 'select'}" style="padding-right: 8px;">{{currentLabel}}</span>
             <span class="caret" ng-class="{ 'table-caret': td === true }" ng-style="{color: color, 'border-top-color': color}"></span>
         </button>
         <span class="dropdown-arrow dropdown-arrow-inverse"></span>
-        <ul class="dropdown-menu dropdown-inverse" ng-style="{ left: leftShift }">
+        <ul class="dropdown-menu dropdown-inverse" ng-style="{ left: leftShift, width: width }" style="max-height: 200px;overflow: auto;padding-bottom: 30px;"
+            ng-mouseleave="open = false">
             <li ng-repeat="item in items">
                 <a ng-click="selectItem( item );" ng-show="item[ nameProperty ] !== '-'">{{item[ nameProperty ]}}</a>
                 <div ng-show="item[ nameProperty ] === '-'" class="divider"></div>
