changing a few items that came up during code review dealing with CSS and internationalization

--- a/source/java/admin-webapp/src/scripts/directives/widgets/macbrowser/macbrowser.html
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/macbrowser/macbrowser.html
@@ -4,7 +4,7 @@
         {{ browserTitle }}
     </div>
     
-    <div class="flex" style="position: absolute;top: 34px;bottom: 34px;right: 0px;left: 0px;">
+    <div class="flex section-container">
         <div class="browser-section" ng-style="{ width: columns[0].width + 'px'}">
             <div class="column-header">{{ columns[0].title }}</div>
             <div class="list-container">
