creating the stat slider for the status tiles

--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -97,6 +97,7 @@
     <script type="text/javascript" src="scripts/directives/widgets/macbrowser/macbrowser.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/spinner/spinner.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/linkbuttons/linkbuttons.js"></script>
+    <script type="text/javascript" src="scripts/directives/widgets/summarynumberdisplay/summaryNumberDisplay.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/statustile/statusTile.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/tooltip/tooltip.js"></script>
 
