--- a/source/java/admin-webapp/src/scripts/directives/widgets/summarynumberdisplay/summaryNumberDisplay.html
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/summarynumberdisplay/summaryNumberDisplay.html
@@ -1,15 +1,15 @@
 <div class="summary-number-display flex">
     
-    <div>
-        <div style="width: 4px;height: 4px;border: 1px solid gray;border-radius: 2px;" ng-repeat="item in data"></div>
+    <div class="dots-parent" ng-show="data.length > 1">
+        <div class="dot" ng-repeat="item in data" ng-class="{ filled : $index === visibleIndex }" ng-click="dotClicked( $index )"></div>
     </div>
     
-    <div style="position: relative;">
-        <div class="pull-left main-number">{{data[visibleIndex].wholeNumber}}</div>
-        <div class="pull-left decimals">
-            <span ng-show="decimals > 0">{{data[visibleIndex].decimals}}</span>
+    <div class="flex" style="flex-wrap: nowrap;">
+        <div class="main-number" ng-style="{ 'min-width': numberMinWidth }">{{data[visibleIndex].wholeNumber}}</div>
+        <div class="decimals" ng-style="{ 'min-width': decimalMinWidth }">
+            <span ng-show="data[visibleIndex].decimals > 0">.{{data[visibleIndex].decimals}}</span>
             <span>{{data[visibleIndex].suffix}}</span>
         </div>
-        <div class="pull-left tile-description">{{data[visibleIndex].description}}</div>
+        <div class="tile-description">{{data[visibleIndex].description}}</div>
     </div>
 </div>
