Re-skinning the sla values and fixing tests, also finishing the snapshot editing case

--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -93,6 +93,7 @@
     <script type="text/javascript" src="scripts/directives/angular-fui/fui-dropdown/fui-dropdown.js"></script>
     <script type="text/javascript" src="scripts/directives/angular-fui/fui-input/fui-input.js"></script>
     <script type="text/javascript" src="scripts/directives/angular-fui/fui-slider/fui-slider.js"></script>
+    <script type="text/javascript" src="scripts/directives/widgets/slider/slider.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/treegrid/treegrid.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/macbrowser/macbrowser.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/spinner/spinner.js"></script>
