making the volume drill-in page live.  Required a lot of wor on the line chart

--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -78,6 +78,7 @@
     <script type="text/javascript" src="scripts/admin/profile/profile.js"></script>
     <script type="text/javascript" src="scripts/admin/firebreak/firebreak.js"></script>
     <script type="text/javascript" src="scripts/volumes/view/viewVolumeController.js"></script>
+    <script type="text/javascript" src="scripts/volumes/view/snapshotPolicyController.js"></script>
     <script type="text/javascript" src="scripts/system/addnode/addnode.js"></script>@@DEV@@-->
 
     <script type="text/javascript" src="templates.js"></script>
