--- a/source/java/admin-webapp/src/scripts/volumes/create/clone.html
+++ b/source/java/admin-webapp/src/scripts/volumes/create/clone.html
@@ -5,8 +5,8 @@
     </div>
     
     <div class="to-clone-or-not">
-        <fds-radio ng-model="volumeVars.toClone" value="new" name="clone" icon-class="icon-clone" label="{{ 'volumes.l_create_blank_volume' | translate }}"></fds-radio>
-        <fds-radio ng-model="volumeVars.toClone" value="clone" name="clone" icon-class="icon-presets" label="{{ 'volumes.l_clone_existing' | translate }}" ng-show="cloneOptions.length > 0"></fds-radio>
+        <fds-radio ng-model="volumeVars.toClone" value="new" name="clone" icon-class="icon-presets" label="{{ 'volumes.l_create_blank_volume' | translate }}"></fds-radio>
+        <fds-radio ng-model="volumeVars.toClone" value="clone" name="clone" icon-class="icon-clone" label="{{ 'volumes.l_clone_existing' | translate }}" ng-show="cloneOptions.length > 0"></fds-radio>
 
     </div>
     
