--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -96,6 +96,7 @@
     <script type="text/javascript" src="scripts/directives/angular-fui/fui-slider/fui-slider.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/slider/slider.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/treegrid/treegrid.js"></script>
+    <script type="text/javascript" src="scripts/directives/widgets/pager/pager.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/macbrowser/macbrowser.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/spinner/spinner.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/linkbuttons/linkbuttons.js"></script>
