add node was broken and missing new lines.

--- a/source/java/admin-webapp/src/scripts/system/addnode/addnode.html
+++ b/source/java/admin-webapp/src/scripts/system/addnode/addnode.html
@@ -1,4 +1,4 @@
-<div class="dialog-page" ng-class="{shown: addingnode, hideit: !addingnode}" ng-controller="addNodeController">
+<div class="dialog-page" ng-controller="addNodeController">
 
     <div class="modal-header">
         <span>Add Node</span>
