--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -60,6 +60,7 @@
     <script type="text/javascript" src="scripts/volumes/volumeController.js"></script>
     <script type="text/javascript" src="scripts/volumes/create/volumeCreateController.js"></script>
     <script type="text/javascript" src="scripts/volumes/create/nameTypeController.js"></script>
+    <script type="text/javascript" src="scripts/system/systemContainerController.js"></script>
     <script type="text/javascript" src="scripts/system/systemController.js"></script>
     <script type="text/javascript" src="scripts/volumes/create/qualityOfServiceController.js"></script>
     <script type="text/javascript" src="scripts/volumes/create/cloneController.js"></script>
