replacing the font and cleaning up class name changes.  Also fixing a few firebreak bugs found when hooking it up

--- a/source/java/admin-webapp/src/scripts/volumes/create/nameType.html
+++ b/source/java/admin-webapp/src/scripts/volumes/create/nameType.html
@@ -17,7 +17,7 @@
         <div class="header">
             <span class="light-print" translate>volumes.l_data_connector</span>
             <div class="pull-right" ng-show="dataConnectorEnablment === true">
-                <span class="icon icon-pencil edit-data-connector-button" ng-click="editing = true"></span>
+                <span class="icon icon-edit edit-data-connector-button" ng-click="editing = true"></span>
             </div>
         </div>
 
