--- a/source/java/admin-webapp/src/scripts/volumes/volumes.html
+++ b/source/java/admin-webapp/src/scripts/volumes/volumes.html
@@ -59,9 +59,9 @@
                             </td>
                             <td class="button-group">
                                 <div class="inline" style="position: relative;">
-                                    <span class="icon-cake" ng-click="takeSnapshot( $event, volume )" title="Take a snapshot">
+                                    <span class="icon-snapshot" ng-click="takeSnapshot( $event, volume )" title="Take a snapshot">
                                     </span>
-                                    <span class="icon-pencil" ng-click="edit( $event, volume )" title="Edit settings"></span>
+                                    <span class="icon-edit" ng-click="edit( $event, volume )" title="Edit settings"></span>
                                     <!--<span class="fui-cross" ng-click="delete( volume )" title="Delete volume"></span>-->
                                 </div>
                             </td>
