--- a/source/java/admin-webapp/src/scripts/volumes/create/clone.html
+++ b/source/java/admin-webapp/src/scripts/volumes/create/clone.html
@@ -12,7 +12,7 @@
     
     <div class="flex" ng-show="choosing === false && volumeVars.toClone === 'clone'">
         <div>Clone from {{getSelectedName()}}</div>
-        <span class="icon icon-pencil" ng-click="choosing = true" style="margin-left: 8px;color: #A0A0A0"></span>
+        <span class="icon icon-edit" ng-click="choosing = true" style="margin-left: 8px;color: #A0A0A0"></span>
     </div>
     
     <div ng-show="volumeVars.toClone === 'clone' && choosing === true">
