enabling the delete volume functionality

--- a/source/java/admin-webapp/src/scripts/volumes/create/nameType.html
+++ b/source/java/admin-webapp/src/scripts/volumes/create/nameType.html
@@ -45,7 +45,7 @@
                             </div>
                             
                             <div class="flex" ng-show="editing === true">
-                                <spinner class="data-connector-size-spinner" value="_selectedSize" min="1" max="999" step="1" class="skinny" style="margin-right: 4px;"></spinner>
+                                <spinner class="data-connector-size-spinner skinny" value="_selectedSize" min="1" max="999" step="1" class="skinny" style="margin-right: 4px;"></spinner>
                                 <fui-dropdown skinny="true" background-color="#2486F8" items="sizes" selected="_selectedUnit"></fui-dropdown>
                             </div>
                         </div>
