more JSON changes

--- a/source/java/admin-webapp/src/scripts/status/status.html
+++ b/source/java/admin-webapp/src/scripts/status/status.html
@@ -68,7 +68,7 @@
                         <span>{{getActivityCategoryString(activity.category)}}</span>
                     </td>
                     <td>{{activity.defaultMessage}}</td>
-                    <td style="text-align: right;">{{ getTimeAgo( activity.time ) }}</td>
+                    <td style="text-align: right;">{{ getTimeAgo( activity.initialTimestamp ) }}</td>
                 </tr>
             </tbody>
         </table>
