--- a/source/java/admin-webapp/src/scripts/status/status.html
+++ b/source/java/admin-webapp/src/scripts/status/status.html
@@ -41,7 +41,7 @@
             </div>
             <div class="tile-parent">
 <!--                <div class="capacity-tile tile"></div>-->
-                <status-tile tile-title="{{ 'status.l_capacity' | translate }}" calculated-data="items">
+                <status-tile tile-title="{{ 'status.l_capacity' | translate }}" calculated-data="capacityItems">
                     <line-chart data="capacityStats" colors="fakeCapColors" opacities="fakeOpacities" y-axis-label-function="capacityLabelFx" axis-color="#A0A0A0" line-stipples="capacityLineStipples" line-colors="capacityLineColors" tooltip="setCapacityTooltipText" domain-labels="capacityLabels" background-color="#f7f7f7"></line-chart>
                 </status-tile>
             </div>
