--- a/source/java/admin-webapp/src/scripts/directives/fds-components/snapshot-policies/snapshot-policy.html
+++ b/source/java/admin-webapp/src/scripts/directives/fds-components/snapshot-policies/snapshot-policy.html
@@ -1,4 +1,4 @@
-<div ng-controller="snapshotPolicyController" ng-style="{ width : (editing === true ) ? '880px' : '650px' }">
+<div ng-style="{ width : (editing === true ) ? '880px' : '650px' }">
     
     <div class="header">
         <span translate>volumes.l_snapshot_policy</span>
