--- a/source/java/admin-webapp/src/scripts/directives/widgets/slidewindowstack/slidewindowstack.html
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/slidewindowstack/slidewindowstack.html
@@ -1,7 +1,7 @@
 <div >
     <div style="height: 30px;">
         <div class="inline">
-            <a ng-repeat="slide in currentStack" ng-if="!$last" ng-click="back( $index )">&lt;&nbsp;{{slide.breadcrumbName}}</a>
+            <a class="slide-window-stack-breadcrumb" ng-repeat="slide in currentStack" ng-if="!$last" ng-click="back( $index )">&lt;&nbsp;{{slide.breadcrumbName}}</a>
         </div>
     </div>
     
