--- a/source/java/admin-webapp/src/scripts/status/status.html
+++ b/source/java/admin-webapp/src/scripts/status/status.html
@@ -34,7 +34,7 @@
             <div class="tile-parent">
 <!--                <div class="capacity-tile tile"></div>-->
                 <status-tile tile-title="{{ 'status.l_capacity' | translate }}" calculated-data="capacityItems">
-                    <line-chart data="capacityStats" colors="fakeCapColors" opacities="fakeOpacities" y-axis-label-function="capacityLabelFx" axis-color="#A0A0A0" line-stipples="capacityLineStipples" line-colors="capacityLineColors" tooltip="setCapacityTooltipText" domain-labels="capacityLabels" background-color="#f7f7f7"></line-chart>
+                    <line-chart data="capacityStats" colors="fakeCapColors" y-axis-label-function="capacityLabelFx" axis-color="#A0A0A0" line-stipples="capacityLineStipples" line-colors="capacityLineColors" tooltip="setCapacityTooltipText" domain-labels="capacityLabels" background-color="#f7f7f7"></line-chart>
                 </status-tile>
             </div>
         </div>
@@ -42,7 +42,7 @@
             <div class="tile-parent">
 <!--                <div class="performance-tile tile"></div>-->
                 <status-tile tile-title="{{ 'status.l_performance' | translate }}" calculated-data="performanceItems">
-                    <line-chart data="performanceStats" colors="performanceColors" line-colors="performanceLine" opacities="fakeOpacities" suffix="IOPs" axis-color="#A0A0A0" domain-labels="performanceLabels" background-color="#f7f7f7"></line-chart>
+                    <line-chart data="performanceStats" colors="performanceColors" line-colors="performanceLine" suffix="IOPs" axis-color="#A0A0A0" domain-labels="performanceLabels" background-color="#f7f7f7"></line-chart>
                 </status-tile>
             </div>
             <div class="tile-parent">
